LayoutTests:

Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13767
          REGRESSION: Multipart image documents are garbled

        * http/tests/multipart/invalid-image-data-standalone-expected.checksum: Added.
        * http/tests/multipart/invalid-image-data-standalone-expected.png: Added.
        * http/tests/multipart/invalid-image-data-standalone-expected.txt: Added.
        * http/tests/multipart/invalid-image-data-standalone.html: Added.
        * http/tests/multipart/resources/green-100x100.png: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13767
          REGRESSION: Multipart image documents are garbled

        Test: http/tests/multipart/invalid-image-data-standalone.html

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::isLoadingMultipartContent): Added.
        * loader/DocumentLoader.h:
        * loader/ImageDocument.cpp:
        (WebCore::ImageTokenizer::finish): If the image is multipart, make a copy
        of the current part instead of using the resource data, which is going to be
        overwritten by the next part.
        * loader/MainResourceLoader.h:
        (WebCore::MainResourceLoader::isLoadingMultipartContent): Added.



Canonical link: https://commits.webkit.org/18164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21760 268f45cc-cd09-0410-ab3c-d52691b4dbfc