WebCore/loader/MainResourceLoader.h
@@ -55,6 +55,8 @@ namespace WebCore {
 
         void handleDataLoadNow(Timer<MainResourceLoader>*);
 
+        bool isLoadingMultipartContent() const { return m_loadingMultipartContent; }
+
     private:
         MainResourceLoader(Frame*);
 
